clusters/homelab/infrastructure/traefik/dashboard-public-ipallowlist-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-public-ipallowlist
  namespace: traefik
  labels:
    traefik.tafu.casa/instance: public
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
      - 10.0.0.0/8
