clusters/homelab/infrastructure/traefik/traefik-public-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-public-dashboard
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-public-traefik
  ports:
    - name: traefik
      port: 8080
      targetPort: 8080
      protocol: TCP
