clusters/homelab/infrastructure/traefik/dashboard-public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-public
  namespace: traefik
  labels:
    traefik.tafu.casa/instance: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-public.cl.tafu.casa`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      middlewares:
        - name: dashboard-public-ipallowlist
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-cl-tafu-casa-tls
